crates/tests/libs/bindgen/data/error/top_level_name_value_syntax/input.rdl

#[winrt]
mod Test {
    attribute FooAttribute { fn(); }

    #[Foo = "bar"]
    class MyClass {}
}
        